Fix: Overlapping layers

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overflow: hidden;
+}
+
 #root {
   min-height: 100vh;
 }
